Bug 460970 - Kaffeine and wayland
Summary: Kaffeine and wayland
Status: RESOLVED FIXED
Alias: None
Product: kaffeine
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR crash
Target Milestone: ---
Assignee: Mauro Carvalho Chehab
URL:
Keywords: drkonqi
: 463111 468074 469815 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-10-25 07:16 UTC by Felix Elens
Modified: 2023-05-16 10:10 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Elens 2022-10-25 07:16:23 UTC
Application: kaffeine (2.0.18)

Qt Version: 5.15.6
Frameworks Version: 5.98.0
Operating System: Linux 5.19.15-301.fc37.x86_64 x86_64
Windowing System: Wayland
Distribution: Fedora Linux 37 (Workstation Edition)
DrKonqi: 5.25.5 [KCrashBackend]

-- Information about the crash:
Kaffeine not working properly in wayland. two windows open whan we read a video. (one with the video plain screen, one with kaffeine system) after 1 mn kaffeine cut off.

The reporter is unsure if this crash is reproducible.

-- Backtrace:
Application: Kaffeine (kaffeine), signal: Segmentation fault

[KCrash Handler]
#4  0x00007efff8f81d83 in XQueryExtension () from /lib64/libX11.so.6
#5  0x00007efff8f75db6 in XInitExtension () from /lib64/libX11.so.6
#6  0x00007efff8f3392f in XextAddDisplay () from /lib64/libXext.so.6
#7  0x00007efffb555ec3 in XScreenSaverSuspend () from /lib64/libXss.so.1
#8  0x00007efff9d67b2f in void doActivate<false>(QObject*, int, void**) () from /lib64/libQt5Core.so.5
#9  0x00007efff9d6ad2e in QTimer::timeout(QTimer::QPrivateSignal) () from /lib64/libQt5Core.so.5
#10 0x00007efff9d5ead5 in QObject::event(QEvent*) () from /lib64/libQt5Core.so.5
#11 0x00007efffa7f0d02 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /lib64/libQt5Widgets.so.5
#12 0x00007efff9d341c8 in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /lib64/libQt5Core.so.5
#13 0x00007efff9d843b1 in QTimerInfoList::activateTimers() () from /lib64/libQt5Core.so.5
#14 0x00007efff9d84cd4 in idleTimerSourceDispatch(_GSource*, int (*)(void*), void*) () from /lib64/libQt5Core.so.5
#15 0x00007efff819cc3f in g_main_context_dispatch () from /lib64/libglib-2.0.so.0
#16 0x00007efff81f23c8 in g_main_context_iterate.constprop () from /lib64/libglib-2.0.so.0
#17 0x00007efff8199ec0 in g_main_context_iteration () from /lib64/libglib-2.0.so.0
#18 0x00007efff9d8502a in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#19 0x00007efff9d32c1a in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /lib64/libQt5Core.so.5
#20 0x00007efff9d3ace2 in QCoreApplication::exec() () from /lib64/libQt5Core.so.5
#21 0x000055b69610dab4 in main ()
[Inferior 1 (process 6497) detached]

Reported using DrKonqi
Comment 1 Nicolas Fella 2022-10-31 12:32:23 UTC
It looks like kaffeine is calling X11 code, in particular XScreenSaverSuspend, on Wayland. That's not going to go well
Comment 2 Bug Janitor Service 2022-10-31 12:40:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/kaffeine/-/merge_requests/10
Comment 3 Nicolas Fella 2022-12-13 21:35:17 UTC
Git commit 47c2fab9ebad8b774a421bb66c5651098f45ff34 by Nicolas Fella.
Committed on 13/12/2022 at 13:52.
Pushed by aacid into branch 'master'.

Don't invoke XScreenSaverSuspend on Wayland

M  +5    -2    src/mediawidget.cpp

https://invent.kde.org/multimedia/kaffeine/commit/47c2fab9ebad8b774a421bb66c5651098f45ff34
Comment 4 Nicolas Fella 2022-12-16 12:59:33 UTC
*** Bug 463111 has been marked as a duplicate of this bug. ***
Comment 5 Nicolas Fella 2023-04-02 15:02:22 UTC
*** Bug 468074 has been marked as a duplicate of this bug. ***
Comment 6 Nicolas Fella 2023-05-16 10:10:21 UTC
*** Bug 469815 has been marked as a duplicate of this bug. ***