Don't invoke XScreenSaverSuspend on Wayland

BUG: 460970